Revision history for File::Gettext

0.16.2    2013-04-11 00:17:22
          Extracted Schema, ResultSource and Stroage classes from F::DC
          Imported code and tests from File::DataClass distribution

0.1.1     2013-04-10 23:44:32
          Created initial project files
